force-app/main/default/objects/EventSphere_Session__c/EventSphere_Session__c.object-meta.xml
<CustomObject>
    <label>EventSphere Session</label>
    <nameField>
        <label>Session Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EventSphere Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>