force-app/main/default/objects/EventSphere_Session__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event</label>
    <referenceTo>EventSphere_Event__c</referenceTo>
    <relationshipLabel>EventSphere Sessions</relationshipLabel>
    <relationshipName>EventSphere_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>