force-app/main/default/objects/EventSphere_Session__c/fields/Session_Description__c.field-meta.xml
<CustomField>
    <fullName>Session_Description__c</fullName>
    <label>Session Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>