force-app/main/default/objects/EventSphere_Session__c/fields/Session_Type__c.field-meta.xml
<CustomField>
    <fullName>Session_Type__c</fullName>
    <label>Session Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Keynote</fullName>
            </value>
            <value>
                <fullName>Workshop</fullName>
            </value>
            <value>
                <fullName>Breakout Session</fullName>
            </value>
            <value>
                <fullName>Panel Discussion</fullName>
            </value>
            <value>
                <fullName>Hands-on Lab</fullName>
            </value>
            <value>
                <fullName>Networking</fullName>
            </value>
            <value>
                <fullName>Certification Training</fullName>
            </value>
            <value>
                <fullName>Closing Ceremony</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>