force-app/main/default/objects/EventSphere_Session__c/fields/Speaker__c.field-meta.xml
<CustomField>
    <fullName>Speaker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Speaker</label>
    <referenceTo>EventSphere_Speaker__c</referenceTo>
    <relationshipLabel>EventSphere Sessions</relationshipLabel>
    <relationshipName>EventSphere_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>