force-app/main/default/objects/EventSphere_Session__c/fields/Total_Assigned_Speakers__c.field-meta.xml
<CustomField>
    <fullName>Total_Assigned_Speakers__c</fullName>
    <label>Total Assigned Speakers</label>
    <summaryForeignKey>Speaker_Session_Assignment__c.Session__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>