force-app/main/default/objects/EventSphere_Session__c/validationRules/Session_Capacity_Must_Be_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Session_Capacity_Must_Be_Positive</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Capacity__c)),
    Capacity__c &lt;= 0
)</errorConditionFormula>
    <errorDisplayField>Capacity__c</errorDisplayField>
    <errorMessage>Session Capacity must be greater than zero.</errorMessage>
</ValidationRule>