force-app/main/default/objects/EventSphere_Session__c/validationRules/Session_End_Must_Be_After_Start.validationRule-meta.xml
<ValidationRule>
    <fullName>Session_End_Must_Be_After_Start</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Start_Date_Time__c)),
    NOT(ISBLANK(End_Date_Time__c)),
    End_Date_Time__c &lt;= Start_Date_Time__c
)</errorConditionFormula>
    <errorDisplayField>End_Date_Time__c</errorDisplayField>
    <errorMessage>Session End Date/Time must be later than the Session Start Date/Time.</errorMessage>
</ValidationRule>